tests/NormalTests/paczka1/small_fuzzy/59795204.err
Error in line 5: aPa3K8y S491 12,2
Error in line 13: GJmm3Fc S372 28,1
Error in line 9: WlocO S113 71,5
